# sgi_pkc

./: CMakeLists.txt  Kconfig  LA_OPT_Online_Code_Hosting.htm  LICENSE.md  ReleaseNotes.txt  SBOM-MCU_DCI-DCI_SDK_V0.2.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V1.0.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V3.0.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V4.0.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V4.1.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V4.2.0.spdx.json  SBOM-MCU_DCI-DCI_SDK_V4.2.1.spdx.json
cmake/: CMakeLists.txt  tfm.cmake
examples/mcuxClAeadModes/: mcuxClAeadModes_Ccm_Aes128_Multipart_example.c  mcuxClAeadModes_Ccm_Aes128_Oneshot_Nist2_example.c  mcuxClAeadModes_Ccm_Aes128_Oneshot_PreloadedKey_example.c  mcuxClAeadModes_Gcm_Aes128_Multipart_example.c  mcuxClAeadModes_Gcm_Aes128_Oneshot_LongNonce_example.c  mcuxClAeadModes_Gcm_Aes128_Oneshot_example.c
examples/mcuxClCipherModes/: mcuxClCipherModes_Cbc_Aes128_Multipart_KeyRfc3394Encoding_example.c  mcuxClCipherModes_Cbc_Aes128_Multipart_PaddingISO_example.c  mcuxClCipherModes_Cbc_Aes128_Multipart_PaddingZero_Dma_NonBlocking_example.c  mcuxClCipherModes_Cbc_Aes128_Multipart_PaddingZero_example.c  mcuxClCipherModes_Cbc_Aes128_Multipart_example.c  mcuxClCipherModes_Cbc_Aes128_Oneshot_Dma_NonBlocking_example.c  mcuxClCipherModes_Cbc_Aes128_Oneshot_PaddingISO_example.c  mcuxClCipherModes_Cbc_Aes128_Oneshot_PaddingZero_example.c  mcuxClCipherModes_Cbc_Aes128_Oneshot_example.c  mcuxClCipherModes_Ctr_Aes128_Multipart_Dma_NonBlocking_example.c  mcuxClCipherModes_Ctr_Aes128_Multipart_example.c  mcuxClCipherModes_Ctr_Aes128_Oneshot_Dma_NonBlocking_example.c  mcuxClCipherModes_Ctr_Aes128_Oneshot_example.c  mcuxClCipherModes_Ecb_Aes128_Multipart_PaddingISO_example.c  mcuxClCipherModes_Ecb_Aes128_Multipart_PaddingZero_Dma_NonBlocking_MultipleProcess_example.c  mcuxClCipherModes_Ecb_Aes128_Multipart_PaddingZero_Dma_NonBlocking_example.c  mcuxClCipherModes_Ecb_Aes128_Multipart_PaddingZero_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_Dma_NonBlocking_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_PaddingISO_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_PaddingPKCS7_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_PaddingZero_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_PreloadedKey_example.c  mcuxClCipherModes_Ecb_Aes128_Oneshot_example.c
examples/mcuxClCrc/: mcuxClCrc_Crc32_example.c
examples/mcuxClEcc/: mcuxClEcc_ArithmeticOperation_BurmesterDesmedt_NIST_P256_example.c  mcuxClEcc_ArithmeticOperation_PointAdd_NIST_P224_example.c  mcuxClEcc_ArithmeticOperation_PointSub_NIST_P224_example.c  mcuxClEcc_ArithmeticOperation_ScalarMult_secp521r1_example.c  mcuxClEcc_ECDH_KeyAgreement_NIST_P256_example.c  mcuxClEcc_ECDSA_FixedKeys_NIST_P256_example.c  mcuxClEcc_ECDSA_GeneratedKeys_NIST_P256_example.c  mcuxClEcc_ECDSA_VerifyOnly_NIST_P256_example.c  mcuxClEcc_EdDSA_Ed25519_example.c  mcuxClEcc_EdDSA_Ed25519ctx_example.c  mcuxClEcc_EdDSA_Ed25519ph_example.c  mcuxClEcc_EdDSA_GenerateSignature_Ed25519_example.c  mcuxClEcc_EdDSA_VerifySignature_Ed25519_example.c  mcuxClEcc_MontDH_Curve25519_example.c  mcuxClEcc_MontDH_Curve448_example.c  mcuxClEcc_WeierECC_CustomEccWeierType_BN256_example.c  mcuxClEcc_WeierECC_DecodePoint_brainpoolP384r1_example.c  mcuxClEcc_WeierECC_DecodePoint_secp224r1_example.c  mcuxClEcc_WeierECC_KeyValidation_PrivateKey_example.c  mcuxClEcc_Weier_KeyValidation_PrivateKey_example.c  mcuxClEcc_Weier_KeyValidation_PublicKey_example.c
examples/mcuxClFfdh/: mcuxClFfdh_KeyAgreement_ffdhe2048_example.c  mcuxClFfdh_KeyAgreement_ffdhe3072_example.c  mcuxClFfdh_KeyAgreement_ffdhe4096_example.c  mcuxClFfdh_KeyAgreement_ffdhe6144_example.c  mcuxClFfdh_KeyAgreement_ffdhe8192_example.c
examples/mcuxClGlikey/: mcuxClGlikey_example.c
examples/mcuxClHashModes/: mcuxClHashModes_sha224_oneshot_example.c  mcuxClHashModes_sha256_oneshot_dma_nonBlocking_example.c  mcuxClHashModes_sha256_oneshot_example.c  mcuxClHashModes_sha256_streaming_dma_nonBlocking_example.c  mcuxClHashModes_sha256_streaming_example.c  mcuxClHashModes_sha3_224_oneshot_example.c  mcuxClHashModes_sha3_224_streaming_example.c  mcuxClHashModes_sha3_256_oneshot_example.c  mcuxClHashModes_sha3_256_streaming_example.c  mcuxClHashModes_sha3_384_oneshot_example.c  mcuxClHashModes_sha3_384_streaming_example.c  mcuxClHashModes_sha3_512_oneshot_example.c  mcuxClHashModes_sha3_512_streaming_example.c  mcuxClHashModes_sha512_oneshot_example.c
examples/mcuxClHmac/: mcuxClHmac_Sw_Multipart_example.c  mcuxClHmac_Sw_Oneshot_example.c
examples/mcuxClKdfModes/: mcuxClKdfModes_CM_CMAC_example.c  mcuxClKdfModes_SP800_108_Counter_Mode_CMAC_example.c  mcuxClKdfModes_SP800_108_Double_Pipeline_Mode_CMAC_example.c  mcuxClKdfModes_SP800_108_Double_Pipeline_Mode_HMAC_example.c  mcuxClKdfModes_SP800_108_Feedback_Mode_CMAC_example.c  (+3 more)
includes/: mcuxClAead.h  mcuxClAeadModes.h  mcuxClAeadModes_Modes.h  mcuxClAead_Constants.h  mcuxClAead_Functions.h  mcuxClAead_Types.h  mcuxClAes.h  mcuxClAes_Constants.h  mcuxClAes_KeyTypes.h  mcuxClBuffer_Constants.h  mcuxClCipher.h  mcuxClCipherModes.h  mcuxClCipherModes_Modes.h  mcuxClCipher_Constants.h  mcuxClCipher_Functions.h  mcuxClCipher_Types.h  mcuxClCore_FunctionIdentifiers.h  mcuxClCore_Macros.h  mcuxClCore_Platform.h  mcuxClCore_Toolchain.h  mcuxClCrc.h  mcuxClDma_Types.h  mcuxClEcc_Constants.h  mcuxClEcc_ECDSA_VerifySignature_FUP.h  mcuxClEcc_EdDSA_GenerateKeyPair_FUP.h  mcuxClEcc_EdDSA_GenerateSignature_FUP.h  mcuxClEcc_EdDSA_Internal_CalcHashModN_FUP.h  mcuxClEcc_EdDSA_Internal_DecodePoint_FUP.h  mcuxClEcc_Functions.h  mcuxClEcc_Internal_BlindedVarScalarMult_FUP.h  mcuxClEcc_Internal_Convert_FUP.h  mcuxClEcc_Internal_GenerateMultiplicativeBlinding_FUP.h  mcuxClEcc_Internal_Interleave_FUP.h  mcuxClEcc_Internal_Random_FUP.h  mcuxClEcc_Internal_SetupEnvironment_FUP.h  mcuxClEcc_Mont_Internal_SecureScalarMult_XZMontLadder_FUP.h  mcuxClEcc_TwEd_Internal_Convert_FUP.h  mcuxClEcc_TwEd_Internal_PointArithmeticEd25519_FUP.h  mcuxClEcc_TwEd_Internal_PointArithmetic_FUP.h  mcuxClEcc_TwEd_Internal_PointValidation_FUP.h  (+117 more)
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+8808 files in other folders)
